# weixin-agent-sdk

./: README.md  pnpm-lock.yaml  重构指南.md
py-weixin-agent-sdk/: .gitignore  pyproject.toml
py-weixin-agent-sdk/examples/echo_agent/: echo.py  main.py
py-weixin-agent-sdk/examples/openai_agent/: agent.py  main.py
py-weixin-agent-sdk/tests/: test_agent.py  test_debug_mode.py  test_inbound.py  test_logger.py  test_monitor.py  test_openai_agent.py  test_process_message.py  test_process_message_extra.py  test_random_util.py  test_redact.py  test_send.py  test_slash_commands.py  test_state_dir.py  test_sync_buf.py
py-weixin-agent-sdk/weixin_agent_sdk/: __init__.py  agent.py  bot.py
py-weixin-agent-sdk/weixin_agent_sdk/api/: client.py  config_cache.py  session_guard.py  types.py
py-weixin-agent-sdk/weixin_agent_sdk/auth/: accounts.py  login_qr.py  pairing.py
py-weixin-agent-sdk/weixin_agent_sdk/cdn/: cdn_upload.py  cdn_url.py  pic_decrypt.py  upload.py
py-weixin-agent-sdk/weixin_agent_sdk/media/: media_download.py  mime_util.py  silk_transcode.py
py-weixin-agent-sdk/weixin_agent_sdk/messaging/: __init__.py  debug_mode.py  error_notice.py  inbound.py  process_message.py  send.py  send_media.py  slash_commands.py
py-weixin-agent-sdk/weixin_agent_sdk/monitor/: __init__.py  monitor.py
py-weixin-agent-sdk/weixin_agent_sdk/storage/: __init__.py  state_dir.py  sync_buf.py
py-weixin-agent-sdk/weixin_agent_sdk/util/: __init__.py  logger.py  random_util.py  redact.py
wechat_bridge/: README.md  main.ts  package.json  pnpm-lock.yaml  tsconfig.json
