[project]
name = "weixin-agent-sdk"
version = "0.1.0"
description = "微信 AI Agent 桥接框架 —— Python 重构版"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "cryptography>=3.4",
    "tenacity>=8.2",
    "qrcode>=7.4",
    "rich>=13.0",
]

[project.optional-dependencies]
silk = ["pysilk"]
dev = ["pytest", "pytest-asyncio", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.12"
